--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-modernist
 title: Khovalyg Taraa
-description: I am studying at 21 school of programming
+description: Student of the 21 school of programming
 show_downloads: true
